# LearnCMake

./: README.md
CmakeTest/: CMakeLists.txt
CmakeTest/lib1/: CMakeLists.txt  print.h
CmakeTest/lib2/: CMakeLists.txt
CmakeUseLib/: CMakeLists.txt  CMakeLists.txt~  main.c  main.c~
CrossCmake/CrossCmakeTest/: CMakeLists.txt  CMakeLists.txt~  a.out  main.c
CrossCmake/OpencvArm/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
CrossCmake/makelib/: CMakeLists.txt  CMakeLists.txt~
CrossCmake/makelib/lib1/: CMakeLists.txt  CMakeLists.txt~  print.c  print.c~
CrossCmake/makelib/lib2/: CMakeLists.txt  CMakeLists.txt~  upper.c  upper.h
CrossCmake/uselibTest/: CMakeLists.txt  CMakeLists.txt~  main.c
CrossCmake/uselibTest/guibuild/: CMakeCache.txt
OpencvTest/: CMakeLists.txt~  main.cpp  main.cpp~
